Fri Mar 12 01:29:34 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* signal/post.c (__write_backtrace): Revert workaround as llvm bug
	#6552 has been solved.

Tue Mar  9 02:46:33 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* signal/post.c (__write_backtrace): Workaround for llvm bug #6552.

Tue Mar  9 02:42:34 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* gcccompat/_b_return.s, gcccompat/_galloca.s, gcccompat/galloca.c
	gcccompat/_eh_support.s, gcccompat/_b_frame.s: Disable code for
	EABI builds.

Tue Mar  9 02:33:58 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* stdlib/atol.c(atol), stdlib/atoll.c(atoll), stdlib/atof.c(atof),
	stdlib/atoi.c(atoi): Force no-inline when including stdlib.h
	avoiding redefinition.

Sat Mar  6 15:14:41 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	Give UnixLib its own crt0.s (like other runtime libraries have).

	* crt/crt0.s, crt/gcrt0.s: Added (based on what we had in
	gcc/config/arm/(g)crt1-riscos.asm).
	* gen-auto.pl: Add crt0.s and gcrt0.s to the build.
	* sys/_syslib.s: Update comment.

Sun Feb 28 16:47:11 2010  Lee Noar  <leenoar@sky.com>

	Improve profiling support:

	* unix/unix.c(_exit): Call gmon_machine_cleanup() to perform
	any low-level cleanup, rather than have it called by atexit
	handlers.
	* include/sys/gmon.h: Declare moncontrol function.
	* include/unistd.h: Reactivate declaration of profil function.
	* gmon/_profile.s: New file. Implement low level routines such
	as IRQ handler, wimp filters and handle their installation.
	* gmon/machine-gmon.c: New file. Handle memory management, initialise
	RISC OS specific structures, set up hardware timer, find HAL routines.
	* gmon/profil.c: New file. Implement the profil function.
	* gmon/gmon.c(__moncontrol): Call __profil() as necessary to start or
	stop profiling.
	(__monstartup): Call machine specific function to initialise
	profiling system.
	(__write_profiling,_mcleanup): Write the gmon.out file even if a